[package]
name = "app_health"
description = "Application health tracking infrastructure."
readme.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
simple-mermaid = "0.2.0"
tokio = { version = "1.47.1", features = ["time", "sync", "rt", "macros"] }

[dev-dependencies]
mutants = { version = "0.0.3" }

[build-dependencies]

[lints]
workspace = true
